--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "mobx-react-lite": "^4.1.0",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-maps": "^1.24.3",
+    "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "uuid": "^11.1.0"
